[package]
name = "smm-zerop"
version = "2.0.0"
edition = "2024"
build = "build.rs"

default-run = "web"

[profile.release]
lto = "fat"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["json", "macros"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
futures-util = "0.3"
minijinja = { version = "2", features = ["loader"] }
minijinja-contrib = { version = "2", features = ["datetime"] }
reqwest = { version = "0.13", default-features = false, features = [
  "charset",
  "json",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
serde_with = "3"
sqlx = { version = "0.8", features = [
  "postgres",
  "runtime-tokio",
  "time",
  "uuid",
] }
thiserror = "2"
tiberius = { version = "0.12", default-features = false, features = [
  "futures-lite",
  "tds73",
  "time",
  "tokio-rustls",
] }
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }

[build-dependencies]
minijinja-embed = "2"
vergen-git2 = "9"
